# temperature_compensation

./: CITATION.cff  LICENSE  Makefile  README.md  REPRODUCIBILITY_AUDIT.md  SUBMISSION_AUDIT.md  pyproject.toml  requirements.txt
data/: optimum_n3_R2.json
paper/: temperature_compensation.tex
scripts/: fig1_twoloop_tradeoff.py  fig2_closedform_floor.py  fig3_nofloor.py  fig4_finite_eps.py  fig5_sandwich.py  optimality_search.py  verify_optimum.py
src/tempcomp/: __init__.py  analysis.py  fpt.py  markov.py  optimum.py  oscillators.py
tests/: test_finite_eps.py  test_gated_chain.py  test_optimum_cache.py  test_positivity.py  test_sandwich.py  test_semimarkov.py
