[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tempcomp"
version = "1.1.0"
description = "Reproducibility package: the precision cost of temperature compensation in biochemical clocks"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ricardo Romero", email = "rromero@cua.uam.mx"}]
dependencies = ["numpy>=1.24", "scipy>=1.10", "sympy>=1.11", "matplotlib>=3.6"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
